update example files

--- a/src/examples/example-exceeds.html
+++ b/src/examples/example-exceeds.html
@@ -20,7 +20,7 @@
               <!-- end search -->
 
           </div>
-        <ul class="student-list">
+          <ul class="student-list">
               <li class="student-item cf">
                   <div class="student-details">
                       <img class="avatar" src="https://randomuser.me/api/portraits/thumb/women/67.jpg">
@@ -686,6 +686,7 @@
           <!-- end pagination -->
 
       </div>
+      <script src="../js/filtering.js"></script>
       <script src="../js/pagination.js"></script>
       <script src="../js/script.js"></script>
   </body>
