--- a/src/examples/44students.html
+++ b/src/examples/44students.html
@@ -455,6 +455,7 @@
               </li>
           </ul>
       </div>
+      <script src="../js/filtering.js"></script>
       <script src="../js/pagination.js"></script>
       <script src="../js/script.js"></script>
   </body>
