--- a/src/examples/64students.html
+++ b/src/examples/64students.html
@@ -655,6 +655,7 @@
               </li>
           </ul>
       </div>
+      <script src="../js/filtering.js"></script>
       <script src="../js/pagination.js"></script>
       <script src="../js/script.js"></script>
   </body>
