--- a/src/examples/example-meets.html
+++ b/src/examples/example-meets.html
@@ -138,6 +138,7 @@
           <!-- end pagination -->
 
       </div>
+      <script src="../js/filtering.js"></script>
       <script src="../js/pagination.js"></script>
       <script src="../js/script.js"></script>
   </body>
